# v3-api-examples

./: .env.example  .gitignore  README.md
rust/: Cargo.toml
rust/examples/close-margin-account/: Cargo.toml
rust/examples/close-margin-account/src/: main.rs
rust/examples/close-position/: Cargo.toml
rust/examples/close-position/src/: main.rs
rust/examples/create-and-fund-margin-account/: Cargo.toml
rust/examples/create-and-fund-margin-account/src/: main.rs
rust/examples/create-margin-account/: Cargo.toml
rust/examples/create-margin-account/src/: main.rs
rust/examples/deposit-margin/: Cargo.toml
rust/examples/deposit-margin/src/: main.rs
rust/examples/liquidator/: Cargo.toml
rust/examples/liquidator/src/: main.rs
rust/examples/trade/: Cargo.toml
rust/examples/trade/src/: main.rs
rust/examples/withdraw-margin/: Cargo.toml
rust/examples/withdraw-margin/src/: main.rs
rust/lib/utils/: Cargo.toml
rust/lib/utils/src/: lib.rs  transaction.rs
typescript/: package.json  pnpm-lock.yaml  tsconfig.json
typescript/examples/: closeMarginAccount.ts  closePosition.ts  createMarginAccount.ts  depositMargin.ts  liquidator.ts  trade.ts  withdrawMargin.ts
typescript/utils/: index.ts  setup.ts  transaction.ts
