[workspace]
members = ["examples/*", "lib/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
dotenvy = "0.15.7"
parcl-v3-api-client = { git = "https://github.com/ParclFinance/v3-api-client-rs.git", rev = "25a872a", package = "parcl-v3-api-client" }
tokio = { version = "1", features = ["full"] }
solana-sdk = "2"
solana-client = "2"
