[package]
name = "liquidator"
version = "0.0.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
futures = "0.3.31"
parcl-v3-api-client = { workspace = true }
tokio = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
utils = { path = "../../lib/utils" }
